KAZOO-1978: fix makefile unit testing

--- a/applications/crossbar/Makefile
+++ b/applications/crossbar/Makefile
@@ -41,7 +41,7 @@ compile-test: test/$(PROJECT).app
 
 test/$(PROJECT).app: src/*.erl src/modules/*.erl
 	@mkdir -p test/
-	ERL_LIBS=$(ERL_LIBS) erlc -v $(ERLC_OPTS)  -o test/ -pa test/  $?
+	ERL_LIBS=$(ERL_LIBS) erlc -v $(ERLC_OPTS) -DTEST -o test/ -pa test/  $?
 
 clean:
 	rm -f ebin/*
@@ -51,7 +51,7 @@ clean:
 test: clean compile-test eunit
 
 eunit: compile-test
-	erl -noshell -pa test -eval "eunit:test([$(MODULES),$(CB_MODULES,$(CB_MODULES_V1),$(CB_MODULES_V2))], [verbose])" -s init stop
+	erl -noshell $(PA) -pa test -eval "eunit:test([$(MODULES),$(CB_MODULES),$(CB_MODULES_V1),$(CB_MODULES_V2)], [verbose])" -s init stop
 
 dialyze:
 	@$(DIALYZER) $(foreach DIR,$(DIRS),$(DIR)/ebin) \
