--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 core/*/test
 deps/*/test
 applications/*/test
-deps/erlydtl-0.7.0/src/erlydtl_parser.erl
+deps/erlydtl-*/src/erlydtl_parser.erl
 deps/zucchini-1.0.0/src/zucchini_lexer.erl
 deps/zucchini-1.0.0/src/zucchini_parser.erl
 utils/sup/deps/getopt/
