--- a/applications/caller10/Makefile
+++ b/applications/caller10/Makefile
@@ -1,13 +1,12 @@
 PROJECT = caller10
 ROOT = ../..
-REBAR = $(ROOT)/utils/rebar/rebar
 DIALYZER = dialyzer
 
 EBINS = $(shell find $(ROOT)/core -maxdepth 2 -name ebin -print) $(shell find $(ROOT)/deps -maxdepth 2 -name ebin -print)
 PA = $(foreach EBIN,$(EBINS),-pa $(EBIN))
 
-ERLC_OPTS = +debug_info +warn_export_all -I$(ROOT)/core -I$(ROOT)/deps $(PA)
-     # +bin_opt_info
+ERLC_OPTS = +debug_info +warn_export_all -I$(ROOT)/core -I$(ROOT)/deps $(PA) \
+	+warn_missing_spec +bin_opt_info #-Werror
 
 DIRS =  . \
     $(ROOT)/core/whistle-1.0.0 \
