KAZOO-2076: remove generated dict on clean

--- a/deps/erlang-localtime-1.0.0/Makefile
+++ b/deps/erlang-localtime-1.0.0/Makefile
@@ -45,6 +45,7 @@ clean:
 	rm -f ebin/*
 	rm -f test/*.beam test/$(PROJECT).app
 	rm -f erl_crash.dump
+	rm -f include/tz_index.hrl
 
 test: clean compile-test eunit
 
