--- a/deps/exmpp-0.9.9/rebar.config
+++ b/deps/exmpp-0.9.9/rebar.config
@@ -1,27 +1,27 @@
 {port_specs, [
- {"priv/exmpp_compress_zlib.so", 
+ {"priv/lib/exmpp_compress_zlib.so", 
      ["c_src/exmpp_compress_zlib.c"
      ,"c_src/exmpp_driver.c"
      ]
 }
-,{"priv/exmpp_stringprep.so",
-     [" exmpp_stringprep.c"
+,{"priv/lib/exmpp_stringprep.so",
+     ["c_src/exmpp_stringprep.c"
      ,"c_src/exmpp_driver.c"
      ]
 }
-,{"priv/exmpp_tls_openssl.so",
+,{"priv/lib/exmpp_tls_openssl.so",
      ["c_src/exmpp_tls.c"
      ,"c_src/exmpp_tls_openssl.c"
      ,"c_src/exmpp_driver.c"
      ]
 }
-,{"priv/exmpp_xml_libxml2.so",
+,{"priv/lib/exmpp_xml_libxml2.so",
      ["c_src/exmpp_xml.c"
      ,"c_src/exmpp_xml_libxml2.c"
      ,"c_src/exmpp_driver.c"
      ]
 }
-,{"priv/exmpp_xml_expat.so",
+,{"priv/lib/exmpp_xml_expat.so",
      ["c_src/exmpp_xml.c"
      ,"c_src/exmpp_xml_expat_legacy.c"
      ,"c_src/exmpp_driver.c"
