KAZOO-2136 exmpp LDFLAGS in rebar.config

--- a/deps/exmpp-0.9.9/rebar.config
+++ b/deps/exmpp-0.9.9/rebar.config
@@ -23,6 +23,12 @@
 }
 ,{"priv/lib/exmpp_xml_expat.so",
      ["c_src/exmpp_xml.c"
+     ,"c_src/exmpp_xml_expat.c"
+     ,"c_src/exmpp_driver.c"
+     ]
+}
+,{"priv/lib/exmpp_xml_expat_legacy.so",
+     ["c_src/exmpp_xml.c"
      ,"c_src/exmpp_xml_expat_legacy.c"
      ,"c_src/exmpp_driver.c"
      ]
@@ -30,5 +36,8 @@
 ]}.
 
 
-{port_env, [{"CFLAGS", "$CFLAGS -I/usr/include/libxml2"}]}.
+{port_env, [
+             {"CFLAGS", "$CFLAGS -I/usr/include/libxml2"}
+            ,{"LDFLAGS", "$LDFLAGS -module -avoid-version -lxml2 -lz -lssl -lexpat"}
+            ]}.
 
