--- a/deps/exmpp-0.9.9/rebar.config
+++ b/deps/exmpp-0.9.9/rebar.config
@@ -38,6 +38,6 @@
 
 {port_env, [
              {"CFLAGS", "$CFLAGS -I/usr/include/libxml2"}
-            ,{"LDFLAGS", "$LDFLAGS -module -avoid-version -lxml2 -lz -lssl -lexpat"}
+            ,{"LDFLAGS", "$LDFLAGS -module -lxml2 -lz -lssl -lexpat"}
             ]}.
 
