KAZOO-2136: removed -module from the LDFLAGS as it caused an issue building on Ubuntu. Not sure what function it plays.

--- a/deps/exmpp-0.9.9/rebar.config
+++ b/deps/exmpp-0.9.9/rebar.config
@@ -38,6 +38,6 @@
 
 {port_env, [
              {"CFLAGS", "$CFLAGS -I/usr/include/libxml2"}
-            ,{"LDFLAGS", "$LDFLAGS -module -lxml2 -lz -lssl -lexpat"}
+            ,{"LDFLAGS", "$LDFLAGS  -lxml2 -lz -lssl -lexpat"}
             ]}.
 
