--- a/deps/cowlib-0.6.2/Makefile
+++ b/deps/cowlib-0.6.2/Makefile
@@ -1,44 +1,52 @@
-# See LICENSE for licensing information.
-
 PROJECT = cowlib
-CT_SUITES = eunit
-PLT_APPS = crypto
+ROOT = ../..
+DIALYZER = dialyzer
 
-include erlang.mk
+EBINS = $(shell find $(ROOT)/core -maxdepth 2 -name ebin -print) $(shell find $(ROOT)/deps -maxdepth 2 -name ebin -print)
+PA = $(foreach EBIN,$(EBINS),-pa $(EBIN))
 
-.PHONY: gen perfs
+ERLC_OPTS = +debug_info +warn_export_all -I$(ROOT)/deps -I./include $(PA)
 
-# Mimetypes module generator.
 
-GEN_URL = http://svn.apache.org/repos/asf/httpd/httpd/trunk/docs/conf/mime.types
-GEN_SRC = src/cow_mimetypes.erl.src
-GEN_OUT = src/cow_mimetypes.erl
+.PHONY: all compile clean
 
-gen:
-	$(gen_verbose) cat $(GEN_SRC) \
-		| head -n `grep -n "%% GENERATED" $(GEN_SRC) | cut -d : -f 1` \
-		> $(GEN_OUT)
-	$(gen_verbose) wget -qO - $(GEN_URL) \
-		| grep -v ^# \
-		| awk '{for (i=2; i<=NF; i++) if ($$i != "") { \
-			split($$1, a, "/"); \
-			print "all_ext(<<\"" $$i "\">>) -> {<<\"" \
-				a[1] "\">>, <<\"" a[2] "\">>, []};"}}' \
-		| sort \
-		| uniq -w 25 \
-		>> $(GEN_OUT)
-	$(gen_verbose) cat $(GEN_SRC) \
-		| tail -n +`grep -n "%% GENERATED" $(GEN_SRC) | cut -d : -f 1` \
-		>> $(GEN_OUT)
+all: compile
 
-# Performance testing.
+MODULES = $(shell ls src/*.erl | sed 's/src\///;s/\.erl/,/' | sed '$$s/.$$//')
 
-deps/horse:
-	git clone -n -- https://github.com/extend/horse $(DEPS_DIR)/horse
-	cd $(DEPS_DIR)/horse ; git checkout -q master
-	$(MAKE) -C $(DEPS_DIR)/horse
+compile: ebin/$(PROJECT).app
+	@cat src/$(PROJECT).app.src \
+		| sed 's/{modules, \[\]}/{modules, \[$(MODULES)\]}/' \
+		> ebin/$(PROJECT).app
+	-@$(MAKE) ebin/$(PROJECT).app
 
-perfs: ERLC_OPTS += -DPERF=1 +'{parse_transform, horse_autoexport}' -DEXTRA=1
-perfs: clean deps deps/horse app
-	$(gen_verbose) erl -noshell -pa ebin deps/horse/ebin \
-		-eval 'horse:app_perf($(PROJECT)), init:stop().'
+COMPILE_FIRST =
+
+ebin/$(PROJECT).app: src/*.erl
+	@mkdir -p ebin/
+	erlc -v $(ERLC_OPTS) -o ebin/ -pa ebin/ $(COMPILE_FIRST) $?
+
+compile-test: test/$(PROJECT).app
+	@cat src/$(PROJECT).app.src \
+		| sed 's/{modules, \[\]}/{modules, \[$(MODULES)\]}/' \
+		> test/$(PROJECT).app
+	-@$(MAKE) test/$(PROJECT).app
+
+test/$(PROJECT).app: src/*.erl
+	@mkdir -p test/
+	erlc -v $(ERLC_OPTS)  -o test/ -pa test/  $?
+
+clean:
+	rm -f ebin/*
+	rm -f test/*.beam test/$(PROJECT).app
+	rm -f erl_crash.dump
+
+test: clean compile-test eunit
+
+eunit: compile-test
+	erl -noshell -pa test -eval "eunit:test([$(MODULES)], [verbose])" -s init stop
+
+dialyze:
+	@$(DIALYZER) $(foreach DIR,$(DIRS),$(DIR)/ebin) \
+		--plt $(ROOT)/.platform_dialyzer.plt --no_native \
+		-Werror_handling -Wrace_conditions -Wunmatched_returns # -Wunderspecs
