--- a/deps/ecsv-1/Makefile
+++ b/deps/ecsv-1/Makefile
@@ -1,13 +1,19 @@
 PROJECT = ecsv
 ROOT = ../..
 
-ERLC_OPTS = -Werror +debug_info +warn_export_all +warn_unused_vars +warn_unused_import +warn_exported_vars
+EBINS = $(shell find $(ROOT)/core -maxdepth 2 -name ebin -print) $(shell find $(ROOT)/deps -maxdepth 2 -name ebin -print)
+PA = $(foreach EBIN,$(EBINS),-pa $(EBIN))
+
+ERLC_OPTS = +debug_info +warn_export_all -I$(ROOT)/core -I$(ROOT)/deps $(PA)
+     # +bin_opt_info
+
+DIRS =  .
 
 .PHONY: all compile clean
 
 all: compile
 
-MODULES = $(shell ls src/*.[e,y]rl | sed 's/src\///;s/\.[e,y]rl/,/' | sed '$$s/.$$//')
+MODULES = $(shell ls src/*.erl | sed 's/src\///;s/\.erl/,/' | sed '$$s/.$$//')
 
 compile: ebin/$(PROJECT).app
 	@cat src/$(PROJECT).app.src \
@@ -15,11 +21,7 @@ compile: ebin/$(PROJECT).app
 		> ebin/$(PROJECT).app
 	-@$(MAKE) ebin/$(PROJECT).app
 
-ebin/$(PROJECT).app: src/*.yrl
-	erlc -v $(ERLC_OPTS) -o src/ -pa ebin/ $?
-	-@$(MAKE) ebin/beam
-
-ebin/beam: src/*.erl
+ebin/$(PROJECT).app: src/*.erl
 	@mkdir -p ebin/
 	erlc -v $(ERLC_OPTS) -o ebin/ -pa ebin/ $?
 
@@ -29,9 +31,9 @@ compile-test: test/$(PROJECT).app
 		> test/$(PROJECT).app
 	-@$(MAKE) test/$(PROJECT).app
 
-test/$(PROJECT).app: src/*.yrl
+test/$(PROJECT).app: src/*.erl
 	@mkdir -p test/
-	erlc -v $(ERLC_OPTS) -o src/ -pa test/ $?
+	erlc -v $(ERLC_OPTS)  -o test/ -pa test/  $?
 
 clean:
 	rm -f ebin/*
