KAZOO-3086: make sure merl is built before erlydtl

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -5,6 +5,7 @@ MAKEDIRS = rabbitmq_server-*/Makefile \
 	ibrowse-*/Makefile \
 	cowlib-*/Makefile \
 	wsock-*/Makefile \
+	merl-*/Makefile \
 	*/Makefile
 
 .PHONY: all compile clean $(MAKEDIRS)
