--- a/deps/gen_smtp-8f7ba01172e679e8b4262334cefc3451b4c36777/Makefile
+++ b/deps/gen_smtp-8f7ba01172e679e8b4262334cefc3451b4c36777/Makefile
@@ -1,46 +1,22 @@
 PROJECT = gen_smtp
 ROOT = ../..
+REBAR = $(ROOT)/utils/rebar/rebar
 
-EBINS = $(shell find $(ROOT)/core -maxdepth 2 -name ebin -print) $(shell find $(ROOT)/deps -maxdepth 2 -name ebin -print)
-PA = $(foreach EBIN,$(EBINS),-pa $(EBIN))
+FILES = $(shell ls ebin/*.beam | grep -v smtp_rfc822_parse)
 
-ERLC_OPTS = +debug_info +warn_export_all -I$(ROOT)/deps -Iinclude/ $(PA)
-     # +bin_opt_info
-
-.PHONY: all compile clean
-
-all: compile
-
-MODULES = $(shell ls src/*.erl | sed 's/src\///;s/\.erl/,/' | sed '$$s/.$$//')
-
-compile: ebin/$(PROJECT).app
-	@cat src/$(PROJECT).app.src \
-		| sed 's/{modules, \[\]}/{modules, \[$(MODULES)\]}/' \
-		> ebin/$(PROJECT).app
-	-@$(MAKE) ebin/$(PROJECT).app
-
-COMPILE_FIRST = 
-
-ebin/$(PROJECT).app: src/*.erl
-	@mkdir -p ebin/
-	erlc -v $(ERLC_OPTS) -o ebin/ -pa ebin/ $(COMPILE_FIRST) $?
-
-compile-test: test/$(PROJECT).app
-	@cat src/$(PROJECT).app.src \
-		| sed 's/{modules, \[\]}/{modules, \[$(MODULES)\]}/' \
-		> test/$(PROJECT).app
-	-@$(MAKE) test/$(PROJECT).app
-
-test/$(PROJECT).app: src/*.erl
-	@mkdir -p test/
-	erlc -v $(ERLC_OPTS)  -o test/ -pa test/  $?
+compile:
+	@./rebar compile
 
 clean:
-	rm -f ebin/*
-	rm -f test/*.beam test/$(PROJECT).app
-	rm -f erl_crash.dump
+	@./rebar clean
 
-test: clean compile-test eunit
+test:
+	./rebar -C rebar.test.config get-deps
+	./rebar -C rebar.test.config compile
+	ERL_AFLAGS="-s ssl" 
+	./rebar -C rebar.test.config skip_deps=true eunit
 
-eunit: compile-test
-	erl -noshell -pa test -eval "eunit:test([$(MODULES)], [verbose])" -s init stop
+dialyze:
+	dialyzer $(FILES)
+
+.PHONY: compile clean test dialyze
