--- a/deps/gen_smtp-8f7ba01172e679e8b4262334cefc3451b4c36777/Makefile
+++ b/deps/gen_smtp-8f7ba01172e679e8b4262334cefc3451b4c36777/Makefile
@@ -4,6 +4,9 @@ REBAR = $(ROOT)/utils/rebar/rebar
 
 FILES = $(shell ls ebin/*.beam | grep -v smtp_rfc822_parse)
 
+all:
+	@./rebar compile
+
 compile:
 	@./rebar compile
 
